--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .idea/
+.DS_Store
+data/*.numbers
+data/*.sqlite
+data/backup/*
 
 ####################################################
 ####################################################
