--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .DS_Store
 app/data/*.numbers
 app/data/*.sqlite*
-app/data/backup/*
+app/data/backups/*
+data/*
+data/backups/*
 
 ####################################################
 ####################################################
